# SECOND_BRAIN

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE_WORKFLOW.md
docs/diagrams/: ingestion-pipeline.mmd  system-context.c4.mmd
eval/benchmarks/: README.md  enterprise_qa.json  iot_actions.json
eval/reports/: .gitkeep  ablation_20260624_191207.json  ablation_20260624_191207.md
graph/schema/: init.cypher
infra/: docker-compose.yml
ingestion/faust/: README.md
ingestion/spark/: README.md
scripts/: fix_svg.py  preview-architecture.mjs  run-eval.ps1  setup.ps1  start-infra.ps1  test-api.ps1
src/second_brain/: __init__.py  cli.py  config.py  schemas.py
src/second_brain/agents/graph/: cogos.py  state.py
src/second_brain/agents/roles/: action_policy.py  critic.py  planner.py  stream_observer.py
src/second_brain/agents/tools/: registry.py
src/second_brain/api/: main.py
src/second_brain/api/static/: index.html
src/second_brain/eval/: run_ablation.py  run_benchmark.py  run_iot_benchmark.py
src/second_brain/eval/ablation/: config.py  report.py
src/second_brain/eval/metrics/: scorers.py
src/second_brain/graph/community/: summaries.py
src/second_brain/graph/loader/: document_loader.py
src/second_brain/graph/schema/: bootstrap.py
src/second_brain/ingestion/extraction/: entities.py
src/second_brain/ingestion/kafka/: consumer.py  pipeline.py  topics.py
src/second_brain/ingestion/mqtt/: bridge.py
src/second_brain/ingestion/stream/: window.py
src/second_brain/memory/: manager.py
src/second_brain/memory/consolidation/: reflection.py
src/second_brain/memory/retrieval/: embeddings.py  scoring.py
src/second_brain/memory/tiers/: long_term.py  short_term.py  working.py
src/second_brain/observability/: otel.py
src/second_brain/scripts/: seed.py
src/second_brain/services/: action_orchestrator.py  action_service.py  container.py
tests/: test_api.py  test_cogos_tools.py  test_memory_and_critic.py  test_phase1_3.py  test_phase4_5.py  test_phase6.py
